使用chai 进行单元测试

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Greency/sixsixsix-UI#readme",
   "dependencies": {
+    "chai": "^4.1.2",
     "vue": "^2.5.16",
     "vue-hot-reload-api": "^2.3.0"
   },
